--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
     "monolog/monolog": "^1.19",
     "maximebf/debugbar": "^1.13",
     "ifsnop/mysqldump-php": "^2.3",
-    "apfelbox/php-file-download": "^2.1"
+    "apfelbox/php-file-download": "^2.1",
+    "twig/twig": "~2.0",
+    "symfony/http-foundation": "^3.4"
   },
   "require-dev": {
     "codeception/codeception": "^2.3"
