--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ files/**/
 logos_clients/*
 # exception to the above rule
 !logos_client/index.php
+compilation_cache
 
 # Logs and databases #
 ######################
