--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
     "ifsnop/mysqldump-php": "^2.3",
     "apfelbox/php-file-download": "^2.1",
     "twig/twig": "~2.0",
-    "symfony/http-foundation": "^3.4"
+    "twig/extensions": "^1.5",
+    "symfony/http-foundation": "^3.4",
+    "symfony/translation": "^4.1",
+    "symfony/config": "^4.1",
+    "symfony/twig-bridge": "^4.1"
   },
   "require-dev": {
     "codeception/codeception": "^2.3"
